# ADS_Truck-Platooning

./: .gitmodules
platoon_ws/src/lane_detection/lane_detection/: cam_pixel_world_transform.py  class_image_processor.py  main.py
platoon_ws/src/lane_detection/launch/: lane_detection.launch.py
platoon_ws/src/lateral_control/include/lateral_control/: lateral_control_node.hpp  pure_pursuit.hpp
platoon_ws/src/lateral_control/launch/: lateral_control.launch.py
platoon_ws/src/lateral_control/src/: lateral_control_node.cpp  pure_pursuit.cpp
platoon_ws/src/longitudinal_control/: CMakeLists.txt  package.xml
platoon_ws/src/longitudinal_control/include/longitudinal_control/: gap_control.hpp  longitudinal_control.hpp  velocity_control.hpp
platoon_ws/src/longitudinal_control/launch/: longitudinal_control.launch.py  longitudinal_control_launch.py
platoon_ws/src/longitudinal_control/src/: gap_control.cpp  longitudinal_control.cpp  longitudinal_control_node.cpp  velocity_control.cpp
platoon_ws/src/platoon_launch/: package.xml
platoon_ws/src/platoon_launch/launch/: platoon_launch.launch.py
platoon_ws/src/platoon_plot/: package.xml  setup.cfg  setup.py
platoon_ws/src/platoon_plot/platoon_plot/: plot_node.py  plot_node2.py
platoon_ws/src/truck_detection/: CMakeLists.txt  package.xml
platoon_ws/src/truck_detection/include/truck_detection/: circle_tracking.hpp  pointcloud2_roi.hpp
platoon_ws/src/truck_detection/launch/: circle_tracking.launch.py  pointcloud2_roi.launch.py  truck_detection.launch.py
platoon_ws/src/truck_detection/src/: circle_tracking.cpp  circle_tracking_node.cpp  pointcloud2_roi.cpp  pointcloud2_roi_node.cpp
